--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -54,6 +54,7 @@
         "streambuf": "cpp",
         "thread": "cpp",
         "typeinfo": "cpp",
-        "*.rh": "cpp"
+        "*.rh": "cpp",
+        "optional": "cpp"
     }
 }
